initial commit of OSGI GhidraScripts
- JavaScript provider hosts an OSGI framework
- each script directory is compiled to a bundle on demand